[package]
name = "hello_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-cli = "0.2.83"
yew = {version = "0.20.0", features = ["csr"]}
trunk = "0.16.0"
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.91"
stylist = {version = "0.12.0", features = ["yew"]}
wasm-bindgen = "0.2"